hphp/hack/test/typecheck/enum_class/coeffects-read-global.php
<?hh

final class Baz {
  public static int $bar = 42;
}

enum class Foo: mixed {
  int BAR = Baz::$bar; // illegal, missing read_props
}
